Add gitignore and fix bug where yellow bg appears wrong number of times